// ─────────────────────────────────────────────────────────────────────────────
// Project Task Management System — DB Schema
// Tool: https://dbdiagram.io  (paste this entire file)
// ─────────────────────────────────────────────────────────────────────────────


// ─── ENUMS ───────────────────────────────────────────────────────────────────

enum user_role {
  superadmin
  admin
  developer
}

enum user_status {
  active
  inactive
}

enum org_member_role {
  admin
  developer
}

enum project_status {
  active
  on_hold
  completed
}

enum task_status {
  to_do
  in_progress
  on_hold
  completed
}

enum task_priority {
  low
  medium
  high
  urgent
}

enum notification_type {
  task_assigned
  task_overdue
  task_completed
  comment_added
  member_removed
}


// ─── USERS ───────────────────────────────────────────────────────────────────

Table users {
  id            uuid         [pk, default: `gen_random_uuid()`, note: "e.g. a1b2c3d4-e5f6-7890-abcd-ef1234567890"]
  name          varchar(150) [not null, note: "e.g. John Doe"]
  email         varchar(255) [not null, unique, note: "e.g. john.doe@example.com"]
  password_hash text         [note: "e.g. $2b$10$Xk9v...hashed bcrypt string"]
  phone         varchar(20)  [note: "e.g. +1-555-867-5309"]
  avatar_url    text         [note: "e.g. https://cdn.example.com/avatars/john.png"]
  role          user_role    [not null, default: "developer", note: "e.g. developer"]
  status        user_status  [not null, default: "active", note: "e.g. active"]
  last_login_at timestamp    [note: "e.g. 2026-04-10 09:30:00"]
  created_at    timestamp    [default: `now()`, note: "e.g. 2026-01-15 08:00:00"]
  updated_at    timestamp    [default: `now()`, note: "e.g. 2026-04-10 09:30:00"]
  deleted_at    timestamp    [note: "null = active user. e.g. 2026-04-12 12:00:00 if soft deleted"]

  indexes {
    email        [name: "users_email_idx"]
    role         [name: "users_role_idx"]
    status       [name: "users_status_idx"]
    deleted_at   [name: "users_deleted_at_idx"]
  }

  Note: "Global identity store. One account per email. Role is platform-level."
}


// ─── SESSIONS ────────────────────────────────────────────────────────────────

Table sessions {
  id                 uuid        [pk, default: `gen_random_uuid()`, note: "e.g. f7e6d5c4-b3a2-1098-fedc-ba9876543210"]
  user_id            uuid        [not null, ref: > users.id, note: "e.g. a1b2c3d4-e5f6-7890-abcd-ef1234567890"]
  refresh_token_hash text        [not null, unique, note: "e.g. sha256:9f86d081884c7d659a2feaa0..."]
  device_info        text        [note: "e.g. Mozilla/5.0 (Windows NT 10.0; Win64; x64)"]
  ip_address         varchar(45) [note: "e.g. 192.168.1.42 or 2001:db8::1"]
  created_at         timestamp   [default: `now()`, note: "e.g. 2026-04-10 09:30:00"]
  expires_at         timestamp   [not null, note: "e.g. 2026-04-17 09:30:00 (7 days later)"]

  indexes {
    user_id [name: "sessions_user_id_idx"]
  }

  Note: "Active login sessions. Refresh token stored as SHA-256 hash only."
}


// ─── OTPS ────────────────────────────────────────────────────────────────────

Table otps {
  id         uuid         [pk, default: `gen_random_uuid()`, note: "e.g. c9d8e7f6-a5b4-3210-cdef-ab0987654321"]
  email      varchar(255) [not null, note: "e.g. john.doe@example.com"]
  user_id    uuid         [ref: > users.id, note: "e.g. a1b2c3d4-e5f6-7890-abcd-ef1234567890"]
  otp_hash   text         [not null, note: "HMAC-SHA256 hash, not bcrypt. e.g. 5d41402abc4b2a76b9719d..."]
  expires_at timestamp    [not null, note: "e.g. 2026-04-10 09:35:00 (5 min after created)"]
  created_at timestamp    [default: `now()`, note: "e.g. 2026-04-10 09:30:00"]

  indexes {
    email   [name: "otps_email_idx"]
    user_id [name: "otps_user_id_idx"]
  }

  Note: "Temporary OTP codes for email login. Expires in 5 minutes."
}


// ─── ORGANIZATIONS ───────────────────────────────────────────────────────────

Table organizations {
  id          uuid         [pk, default: `gen_random_uuid()`, note: "e.g. 11223344-5566-7788-99aa-bbccddeeff00"]
  name        varchar(200) [not null, note: "e.g. Acme Corporation"]
  slug        varchar(100) [not null, unique, note: "e.g. acme-corporation"]
  description text         [note: "e.g. A global leader in anvil manufacturing and roadrunner solutions."]
  owner_id    uuid         [ref: > users.id, note: "The assigned admin. e.g. a1b2c3d4-e5f6-7890-abcd-ef1234567890"]
  created_at  timestamp    [default: `now()`, note: "e.g. 2026-01-01 10:00:00"]
  updated_at  timestamp    [default: `now()`, note: "e.g. 2026-04-10 09:30:00"]
  deleted_at  timestamp    [note: "Soft delete. null = active. e.g. 2026-04-12 12:00:00"]
  deleted_by  uuid         [ref: > users.id, note: "Superadmin who deleted it. e.g. uuid of superadmin"]

  indexes {
    slug       [name: "organizations_slug_idx"]
    owner_id   [name: "organizations_owner_id_idx"]
    deleted_at [name: "organizations_deleted_at_idx"]
  }

  Note: "Created independently by Superadmin. Admin is assigned separately. Soft deleted when org is closed."
}


// ─── ORG MEMBERS ─────────────────────────────────────────────────────────────

Table org_members {
  id        uuid            [pk, default: `gen_random_uuid()`, note: "e.g. aabbccdd-eeff-0011-2233-445566778899"]
  org_id    uuid            [not null, ref: > organizations.id, note: "e.g. 11223344-5566-7788-99aa-bbccddeeff00"]
  user_id   uuid            [not null, ref: > users.id, note: "e.g. a1b2c3d4-e5f6-7890-abcd-ef1234567890"]
  role      org_member_role [not null, default: "developer", note: "e.g. developer"]
  joined_at timestamp       [default: `now()`, note: "e.g. 2026-01-20 11:00:00"]

  indexes {
    (org_id, user_id) [unique, name: "org_members_unique"]
    org_id            [name: "org_members_org_id_idx"]
    user_id           [name: "org_members_user_id_idx"]
  }

  Note: "Junction: user belongs to org with a role. One user, one org."
}


// ─── PROJECTS ────────────────────────────────────────────────────────────────

Table projects {
  id           uuid           [pk, default: `gen_random_uuid()`, note: "e.g. deadbeef-cafe-babe-face-c0ffee000001"]
  org_id       uuid           [not null, ref: > organizations.id, note: "e.g. 11223344-5566-7788-99aa-bbccddeeff00"]
  title        varchar(200)   [not null, note: "e.g. Roadrunner Tracking System v2"]
  description  text           [note: "e.g. Real-time GPS tracking and alert system for desert operations."]
  logo_url     text           [note: "e.g. https://cdn.example.com/logos/roadrunner.png"]
  status       project_status [not null, default: "active", note: "e.g. active"]
  created_by   uuid           [ref: > users.id, note: "e.g. uuid of the admin who created it"]
  completed_at timestamp      [note: "e.g. 2026-06-30 18:00:00 (set when all tasks done)"]
  created_at   timestamp      [default: `now()`, note: "e.g. 2026-02-01 09:00:00"]
  updated_at   timestamp      [default: `now()`, note: "e.g. 2026-04-10 09:30:00"]
  deleted_at   timestamp      [note: "null = active project. e.g. 2026-04-12 12:00:00 if archived"]

  indexes {
    org_id     [name: "projects_org_id_idx"]
    status     [name: "projects_status_idx"]
    deleted_at [name: "projects_deleted_at_idx"]
  }

  Note: "Scoped to one org. Auto-completes when all tasks are completed."
}


// ─── PROJECT MEMBERS ─────────────────────────────────────────────────────────

Table project_members {
  id         uuid      [pk, default: `gen_random_uuid()`, note: "e.g. 00112233-4455-6677-8899-aabbccddeeff"]
  project_id uuid      [not null, ref: > projects.id, note: "e.g. deadbeef-cafe-babe-face-c0ffee000001"]
  user_id    uuid      [not null, ref: > users.id, note: "e.g. a1b2c3d4-e5f6-7890-abcd-ef1234567890"]
  added_by   uuid      [ref: > users.id, note: "e.g. uuid of admin who added this member"]
  joined_at  timestamp [default: `now()`, note: "e.g. 2026-02-05 10:30:00"]

  indexes {
    (project_id, user_id) [unique, name: "project_members_unique"]
    project_id            [name: "project_members_project_id_idx"]
    user_id               [name: "project_members_user_id_idx"]
  }

  Note: "Junction: which developers are assigned to which project."
}


// ─── TASKS ───────────────────────────────────────────────────────────────────

Table tasks {
  id             uuid          [pk, default: `gen_random_uuid()`, note: "e.g. 12345678-abcd-ef01-2345-6789abcdef01"]
  project_id     uuid          [not null, ref: > projects.id, note: "e.g. deadbeef-cafe-babe-face-c0ffee000001"]
  parent_task_id uuid          [ref: > tasks.id, note: "null = root task. set = subtask. e.g. uuid of parent task"]
  title          varchar(300)  [not null, note: "e.g. Implement GPS ping endpoint"]
  description    text          [note: "e.g. POST /api/track/ping — accepts lat/lng, stores to DB, triggers alert if off-route."]
  status         task_status   [not null, default: "to_do", note: "e.g. in_progress"]
  priority       task_priority [not null, default: "medium", note: "e.g. high"]
  due_date       timestamp     [note: "e.g. 2026-05-15 17:00:00"]
  created_by     uuid          [ref: > users.id, note: "e.g. uuid of the admin who created this task"]
  completed_at   timestamp     [note: "e.g. 2026-05-14 14:22:00 (set when status = completed)"]
  created_at     timestamp     [default: `now()`, note: "e.g. 2026-02-10 11:00:00"]
  updated_at     timestamp     [default: `now()`, note: "e.g. 2026-04-10 09:30:00"]
  deleted_at     timestamp     [note: "null = active task. e.g. 2026-04-12 12:00:00 if soft deleted"]

  indexes {
    project_id     [name: "tasks_project_id_idx"]
    parent_task_id [name: "tasks_parent_task_id_idx"]
    status         [name: "tasks_status_idx"]
    priority       [name: "tasks_priority_idx"]
    deleted_at     [name: "tasks_deleted_at_idx"]
    (project_id, status) [name: "tasks_project_status_idx"]
    due_date       [name: "tasks_due_date_idx", note: "Used by overdue cron job"]
  }

  Note: "Scoped to a project. parent_task_id null = root task, set = subtask. Max 1 level deep."
}


// ─── TASK ASSIGNEES ──────────────────────────────────────────────────────────

Table task_assignees {
  id          uuid      [pk, default: `gen_random_uuid()`, note: "e.g. fedcba98-7654-3210-fedc-ba9876543210"]
  task_id     uuid      [not null, ref: > tasks.id, note: "e.g. 12345678-abcd-ef01-2345-6789abcdef01"]
  user_id     uuid      [not null, ref: > users.id, note: "e.g. a1b2c3d4-e5f6-7890-abcd-ef1234567890 (the developer)"]
  assigned_by uuid      [ref: > users.id, note: "e.g. uuid of admin who made the assignment"]
  assigned_at timestamp [default: `now()`, note: "e.g. 2026-02-11 09:00:00"]

  indexes {
    (task_id, user_id) [unique, name: "task_assignees_unique"]
    task_id            [name: "task_assignees_task_id_idx"]
    user_id            [name: "task_assignees_user_id_idx"]
  }

  Note: "Junction: which developers are assigned to which task."
}


// ─── COMMENTS ────────────────────────────────────────────────────────────────

Table comments {
  id         uuid      [pk, default: `gen_random_uuid()`, note: "e.g. c0mment1-abcd-1234-ef56-7890abcdef12"]
  task_id    uuid      [not null, ref: > tasks.id, note: "e.g. 12345678-abcd-ef01-2345-6789abcdef01"]
  author_id  uuid      [ref: > users.id, note: "e.g. uuid of John Doe who wrote this comment"]
  body       text      [not null, note: "e.g. I've pushed the fix for the lat/lng parsing bug. Please review PR #42."]
  created_at timestamp [default: `now()`, note: "e.g. 2026-04-10 10:15:00"]
  updated_at timestamp [default: `now()`, note: "e.g. 2026-04-10 10:20:00 (if edited)"]
  deleted_at timestamp [note: "null = visible. e.g. 2026-04-11 08:00:00 if soft deleted"]

  indexes {
    task_id   [name: "comments_task_id_idx"]
    author_id [name: "comments_author_id_idx"]
  }

  Note: "Task-level discussion. Context stays with the task."
}


// ─── ATTACHMENTS ─────────────────────────────────────────────────────────────

Table attachments {
  id          uuid         [pk, default: `gen_random_uuid()`, note: "e.g. attach01-1234-5678-abcd-ef0123456789"]
  task_id     uuid         [not null, ref: > tasks.id, note: "e.g. 12345678-abcd-ef01-2345-6789abcdef01"]
  uploaded_by uuid         [ref: > users.id, note: "e.g. uuid of the developer who uploaded the file"]
  s3_key      text         [not null, note: "S3 object key. e.g. uploads/tasks/12345678/screenshot-bug.png"]
  file_name   varchar(255) [not null, note: "Original filename shown to user. e.g. screenshot-bug.png"]
  mime_type   varchar(100) [note: "e.g. image/png or application/pdf"]
  file_size   integer      [note: "Size in bytes. e.g. 204800 (= 200 KB)"]
  created_at  timestamp    [default: `now()`, note: "e.g. 2026-04-10 10:30:00"]

  indexes {
    task_id     [name: "attachments_task_id_idx"]
    uploaded_by [name: "attachments_uploaded_by_idx"]
  }

  Note: "Links S3 uploaded files to tasks. Replaces disconnected upload flow."
}


// ─── NOTIFICATIONS ───────────────────────────────────────────────────────────

Table notifications {
  id          uuid              [pk, default: `gen_random_uuid()`, note: "e.g. notif001-abcd-1234-5678-ef0123456789"]
  user_id     uuid              [not null, ref: > users.id, note: "e.g. uuid of the user receiving this notification"]
  type        notification_type [not null, note: "e.g. task_assigned"]
  title       varchar(255)      [not null, note: "e.g. You have been assigned a new task"]
  body        text              [note: "e.g. John assigned you to 'Implement GPS ping endpoint' in Roadrunner Tracking System v2."]
  entity_type varchar(50)       [note: "e.g. task | project | org | user"]
  entity_id   uuid              [note: "ID of the related record. e.g. 12345678-abcd-ef01-2345-6789abcdef01"]
  read_at     timestamp         [note: "null = unread. e.g. 2026-04-10 11:00:00 when user opened it"]
  created_at  timestamp         [default: `now()`, note: "e.g. 2026-04-10 10:45:00"]

  indexes {
    user_id            [name: "notifications_user_id_idx"]
    (user_id, read_at) [name: "notifications_unread_idx"]
  }

  Note: "In-app notifications. read_at null = unread."
}


// ─── AUDIT LOGS ──────────────────────────────────────────────────────────────

Table audit_logs {
  id          uuid         [pk, default: `gen_random_uuid()`, note: "e.g. audit001-abcd-1234-5678-ef0123456789"]
  org_id      uuid         [ref: > organizations.id, note: "null for superadmin actions. e.g. 11223344-5566-7788-99aa-bbccddeeff00"]
  actor_id    uuid         [ref: > users.id, note: "e.g. uuid of the user who performed the action"]
  action      varchar(100) [not null, note: "e.g. task.status_changed | user.deactivated | project.deleted"]
  entity_type varchar(50)  [not null, note: "e.g. task | project | user | org"]
  entity_id   uuid         [not null, note: "e.g. uuid of the affected record"]
  before      text         [note: "JSON snapshot before. e.g. {\"status\": \"in_progress\"}"]
  after       text         [note: "JSON snapshot after. e.g. {\"status\": \"completed\"}"]
  ip_address  varchar(45)  [note: "e.g. 192.168.1.42"]
  created_at  timestamp    [default: `now()`, note: "e.g. 2026-04-10 14:22:00"]

  indexes {
    org_id      [name: "audit_logs_org_id_idx"]
    actor_id    [name: "audit_logs_actor_id_idx"]
    entity_id   [name: "audit_logs_entity_id_idx"]
    created_at  [name: "audit_logs_created_at_idx"]
  }

  Note: "Immutable log of every significant action. Never deleted."
}
